--- a/src/cascadia/TerminalSettingsEditor/EditAction.xaml
+++ b/src/cascadia/TerminalSettingsEditor/EditAction.xaml
@@ -667,6 +667,7 @@
             <ItemsControl Grid.Row="2"
                           Grid.Column="1"
                           IsTabStop="False"
+                          AutomationProperties.Name="{x:Bind ViewModel.AdditionalArgumentsControlAutomationPropName}"
                           ItemTemplateSelector="{StaticResource ArgsTemplateSelector}"
                           ItemsSource="{x:Bind ViewModel.ActionArgsVM.ArgValues, Mode=OneWay}" />
             <TextBlock x:Uid="Actions_Keybindings"
