--- a/src/cascadia/QueryExtension/ExtensionPalette.xaml
+++ b/src/cascadia/QueryExtension/ExtensionPalette.xaml
@@ -14,8 +14,6 @@
              AllowFocusOnInteraction="True"
              AutomationProperties.Name="{x:Bind ControlName, Mode=OneWay}"
              IsTabStop="True"
-             LostFocus="_lostFocusHandler"
-             PointerPressed="_rootPointerPressed"
              PreviewKeyDown="_previewKeyDownHandler"
              TabNavigation="Cycle"
              mc:Ignorable="d">
@@ -178,14 +176,11 @@
         <Grid x:Name="_backdrop"
               Grid.Row="0"
               Grid.Column="1"
-              Margin="8"
               Padding="0,8,0,0"
               HorizontalAlignment="Stretch"
               VerticalAlignment="Stretch"
               Background="{ThemeResource BackdropBackground}"
               BorderBrush="{ThemeResource FlyoutBorderThemeBrush}"
-              BorderThickness="{ThemeResource FlyoutBorderThemeThickness}"
-              CornerRadius="{ThemeResource OverlayCornerRadius}"
               PointerPressed="_backdropPointerPressed"
               Shadow="{StaticResource SharedShadow}"
               Translation="0,0,32">
@@ -339,6 +334,13 @@
                             <Button.Content>
                                 <FontIcon FontSize="16"
                                           Glyph="&#xEDE1;" />
+                            </Button.Content>
+                        </Button>
+                        <Button x:Uid="CloseChatButton"
+                                Click="_closeChat">
+                            <Button.Content>
+                                <FontIcon FontSize="14"
+                                          Glyph="&#xE8BB;" />
                             </Button.Content>
                         </Button>
                     </StackPanel>
